--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "apptbook"
 version = "0.1.0"
-authors = ["npv2"]
+authors = ["Nicholai Venetucci <npv2@pdx.edu>"]
 edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
